fix: spacing?

--- a/apps/site/src/styles/global.css
+++ b/apps/site/src/styles/global.css
@@ -9,16 +9,6 @@ b {
   font-weight: 400;
 }
 
-h1 {
-  font-size: 3.2rem;
-  line-height: 0.8rem;
-}
-
-h2 {
-  font-size: 2rem;
-  line-height: 0.5rem;
-}
-
 .centre-flex {
   align-items: center;
   display: flex;
